force-app/main/default/objects/Deal_Business_History__c/fields/Tenant_Break_Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Break_Tier_Level__c</fullName>
    <description>Tenant Break Tier Level</description>
    <inlineHelpText>Tenant Break Tier Level</inlineHelpText>
    <label>Tenant Break Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No- Tier 1</fullName>
            </value>
            <value>
                <fullName>No - Tier 2</fullName>
            </value>
            <value>
                <fullName>No - Tier 2a</fullName>
            </value>
            <value>
                <fullName>No - Tier 2b</fullName>
            </value>
            <value>
                <fullName>No - Tier 2c</fullName>
            </value>
            <value>
                <fullName>No - Tier 3a</fullName>
            </value>
            <value>
                <fullName>No - Tier 3b</fullName>
            </value>
            <value>
                <fullName>No - Tier 4</fullName>
            </value>
            <value>
                <fullName>No - Tier 4*</fullName>
            </value>
            <value>
                <fullName>No - Tier 5</fullName>
            </value>
            <value>
                <fullName>Yes- Tier 1</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 2</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 2a</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 2b</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 2c</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 3a</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 3b</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 4</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 4*</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>