force-app/main/default/objects/Deal_Business_History__c/fields/Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Term_Years__c</fullName>
    <description>Term in Years</description>
    <inlineHelpText>Term in Years</inlineHelpText>
    <label>Term (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>