force-app/main/default/objects/Deal_Business_History__c/fields/Termination_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Termination_Period_Months__c</fullName>
    <description>Termination Period in Months</description>
    <inlineHelpText>Termination Period in Months</inlineHelpText>
    <label>Termination Period (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>