force-app/main/default/objects/Deal_Business_History__c/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <description>Approval Tier Level</description>
    <inlineHelpText>Approval Tier Level</inlineHelpText>
    <label>Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 2a</fullName>
            </value>
            <value>
                <fullName>Tier 2b</fullName>
            </value>
            <value>
                <fullName>Tier 2c</fullName>
            </value>
            <value>
                <fullName>Tier 3a</fullName>
            </value>
            <value>
                <fullName>Tier 3b</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 4a</fullName>
            </value>
            <value>
                <fullName>Tier 4b</fullName>
            </value>
            <value>
                <fullName>Tier 4*</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>Tier 4L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>