force-app/main/default/objects/Deal_Business_History__c/fields/Tier_Level_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level_Rationale__c</fullName>
    <description>Enter some rationale for the Tier Level entered</description>
    <inlineHelpText>Enter some rationale for the Tier Level entered</inlineHelpText>
    <label>Tier Level Rationale</label>
    <type>TextArea</type>
</CustomField>