force-app/main/default/objects/Deal_Business_History__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <label>Total Rating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>