force-app/main/default/objects/Deal_Business_History__c/validationRules/Approved_Date_Not_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Date_Not_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(Approved_Date__c) &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Approved_Date__c</errorDisplayField>
    <errorMessage>Approval date cannot be in the future</errorMessage>
</ValidationRule>