force-app/main/default/objects/Deal_Business_History__c/validationRules/DBH_Cannot_change_approval_date_on_recor.validationRule-meta.xml
<ValidationRule>
    <fullName>DBH_Cannot_change_approval_date_on_recor</fullName>
    <active>true</active>
    <description>Block users updating date once set</description>
    <errorConditionFormula>NOT( ISNEW() )
&amp;&amp;  ISCHANGED( Approved_Date__c )</errorConditionFormula>
    <errorMessage>You cannot change the approval date of a Deal Business History record</errorMessage>
</ValidationRule>