force-app/main/default/objects/Deal_Business_History__c/validationRules/DBH_Cannot_change_approval_deci_on_recor.validationRule-meta.xml
<ValidationRule>
    <fullName>DBH_Cannot_change_approval_deci_on_recor</fullName>
    <active>true</active>
    <description>Block users updating date once set</description>
    <errorConditionFormula>NOT( ISNEW() )
&amp;&amp;  ISCHANGED(  Approval_Decision__c )</errorConditionFormula>
    <errorMessage>You cannot change the approval Decision on a Deal Business History record</errorMessage>
</ValidationRule>