force-app/main/default/objects/Deal_Business_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approved_By__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Review_Comment__c</columns>
    <columns>Deal__c</columns>
    <columns>Tier_Level__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>